--- a/page-styling.css
+++ b/page-styling.css
@@ -201,6 +201,15 @@ h3 {
     border-radius: 15px;
 }
 
+.gradient{
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgb(255, 255, 255, 0), rgba(39, 39, 39, 0.7));
+    border-radius: 15px;
+}
+
 .tag {
     position: absolute;
     background-color: #1881be;
