--- a/page-styling.css
+++ b/page-styling.css
@@ -16,21 +16,24 @@ white: #FFFFFF
 .container {
     position: relative;
     font-family: sans-serif;
-    width: 100%;
+    width: 1200px;
     height: 100vh;
-    margin: auto;
+    margin: auto auto;
+    display: flex;
+    flex-direction: column;
 }
 
 
 /* Styling for the header */
 .header {
-    width: 94%;
+    width: 100%;
     position: relative;
     background: #FFFFFF;
     margin: 0 auto;
     height: 50px;
     display: flex;
     flex-direction: row;
+    box-sizing: border-box;
 }
 
 .home {
@@ -49,11 +52,11 @@ white: #FFFFFF
 
 .nav-bar {
     /* flex: 1; */
-    width: 100%;
+    width: 95%;
     height: 100%;
     display: flex;
     flex-direction: row;
-    margin: auto;
+    /* margin: auto; */
     /* align-items: stretch; */
     /* padding: 5px; */
 }
@@ -61,8 +64,9 @@ white: #FFFFFF
 .nav-bar div{
     display: flex;
     flex-direction: row;
-    padding-left: 15px;
+    /* padding-left: 10px; */
     margin: auto 0;
+    margin-left: 15px;
 }
 
 div .left-pane{
@@ -101,6 +105,7 @@ div .left-pane{
     display: flex;
     flex-direction: row;
     margin-right: 0px;
+    padding-left: 0px;
 }
 
 .follow-shuffle-brightness .icon{
@@ -128,7 +133,7 @@ div .left-pane{
 }
 
 .search-bar {
-    flex: 1;
+    /* flex: 1; */
     border: 1px solid;
     border-color: #d1cfcf;
     border-right: 0;
@@ -144,7 +149,7 @@ div .left-pane{
 }
 
 #search {
-    width: 160px;
+    width: 120px;
     font-size: 12px;
     border: 0px;
     outline: none;
