--- a/page-styling.css
+++ b/page-styling.css
@@ -16,8 +16,8 @@ white: #FFFFFF
 .container {
     position: relative;
     font-family: sans-serif;
-    width: 1200px;
-    height: 100vh;
+    width: 1250px;
+    /* height: 100%; */
     margin: auto auto;
     display: flex;
     flex-direction: column;
@@ -26,7 +26,7 @@ white: #FFFFFF
 
 /* Styling for the header */
 .header {
-    width: 100%;
+    width: 98%;
     position: relative;
     background: #FFFFFF;
     margin: 0 auto;
@@ -37,6 +37,7 @@ white: #FFFFFF
 }
 
 .home {
+    /* flex: 1; */
     width: 55px;
     height: 55px;
     box-sizing: border-box;
@@ -52,7 +53,7 @@ white: #FFFFFF
 
 .nav-bar {
     /* flex: 1; */
-    width: 95%;
+    /* width: 100%; */
     height: 100%;
     display: flex;
     flex-direction: row;
@@ -165,7 +166,7 @@ div .left-pane{
 
 /* Styling for the main body */
 .main-body {
-    width: 95%;
+    width: 98%;
     margin: auto;
     margin-top: 30px;
 }
